# Anne-Engine

./: CMakeLists.txt  README.md
DevelopNotes/: DevelopNotes.md  Note10_ECS(Entity,Component,System).md  Note11_ImGui.md  Note12_Serialization.md  Note13_RightValue.md  Note14_cppKnowledges.md  Note1_CompileSystem.md  Note2_ThirdPartyLib.md  Note3_CMakeLists.md  Note4_SharedPtr.md  Note5_Std::Function.md  Note7_UI+Panels.md  Note8_ImguiFileDialog&FontAwesome.md  Note9_InspectorSystem.md  Notes6_GLFW.md
Editor/: CMakeLists.txt  Editor.h  Main.cpp
Editor/Application/: ApplicationUI.h
Editor/Application/Basic/: Common.cpp  Common.h  Selected.h
Editor/Application/Inspector/: Inspector.cpp  Inspector.h  ModelPreview.cpp  ModelPreview.h  Registration.h
Editor/Application/Panel/: PanelFunction.cpp  PanelFunction.h  PanelInspector.cpp  PanelInspector.h
Engine/: AnneEngine.h  CMakeLists.txt  EngineConfig.json  Window.cpp  Window.h
Engine/Core/: GraphicsAPI.cpp  GraphicsAPI.h  Serialization.cpp  Serialization.h  Singleton.hpp  SubSystem.hpp  Utility.cpp  Utility.h
Engine/Function/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Engine/Function/Component/: All.h  Camera.h  Component.h  MeshData.h  Transform.h
Engine/Function/Graphics/: MeshManager.cpp  MeshManager.h  Shader.h
Engine/Function/Graphics/Texture/: All.h  ColorTexture.h  TextureBase.h
develop-notes/: DevelopNotes.md
